--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@
 ;全屏模式
 Fullscreen=0
 ;默认窗口大小
-Default_Window_Size=(1200,600)
+Default_Window_Size=(1000,600)
 ;按钮数量
 Button_Num=15
 ;按钮间距
@@ -21,4 +21,4 @@ File_Font=FZBIAOYSJW.TTF
 ;文件名最大字号
 File_Font_Max_Size=30
 ;文件名颜色
-File_Font_Color=white
+File_Font_Color=yellow
