添加文字进度条

--- a/settings.ini
+++ b/settings.ini
@@ -22,3 +22,9 @@ File_Font=FZBIAOYSJW.TTF
 File_Font_Max_Size=30
 ;文件名颜色
 File_Font_Color=yellow
+;时间字体
+Time_Font=FZBIAOYSJW.TTF
+;时间最大字号
+Time_Font_Max_Size=30
+;时间颜色
+Time_Font_Color=yellow
