--- a/settings.ini
+++ b/settings.ini
@@ -2,29 +2,43 @@
 [Appearance]
 ;全屏模式
 Fullscreen=0
-;默认窗口大小
-Default_Window_Size=(1000,600)
+;窗口默认大小
+Window_Default_Size=(1000,600)
+;窗口最小大小
+Window_Min_Size=(500,300)
 ;按钮数量
 Button_Num=15
-;按钮间距
-Button_Space=20
+;按钮最小间距
+Button_Min_Space=20
 ;按钮最大大小
 Button_Max_Size=80
 ;线宽
-Line_Width=4
+Line_Width=5
 ;线颜色
 Line_Color=white
 ;背景颜色
 Background_Color=black
 ;文件名字体
-File_Font=FZBIAOYSJW.TTF
+File_Font=simsun
 ;文件名最大字号
 File_Font_Max_Size=30
 ;文件名颜色
 File_Font_Color=yellow
 ;时间字体
-Time_Font=FZBIAOYSJW.TTF
+Time_Font=fzbiaoysjw
 ;时间最大字号
-Time_Font_Max_Size=30
+Time_Font_Max_Size=20
 ;时间颜色
-Time_Font_Color=yellow
+Time_Font_Color=skyblue
+;播放器参数
+[Player]
+;快退步长
+Back_Time=5
+;快进步长
+Forward_Time=5
+;按键参数
+[Key]
+;重复延迟
+Repeat_Delay=500
+;重复间隔
+Repeat_Interval=100
