--- a/settings.ini
+++ b/settings.ini
@@ -27,9 +27,18 @@ File_Font_Color=yellow
 ;时间字体
 Time_Font=fzbiaoysjw
 ;时间最大字号
-Time_Font_Max_Size=20
+Time_Font_Max_Size=15
 ;时间颜色
-Time_Font_Color=skyblue
+Time_Font_Color=red
+;进度条宽度
+Progress_Width=20
+;进度条颜色1
+Progress_Color_1=blue
+;进度条颜色2
+Progress_Color_2=yellow
+;进度条间距
+Progress_Space=10
+
 ;播放器参数
 [Player]
 ;快退步长
@@ -37,6 +46,7 @@ Back_Time=5
 ;快进步长
 Forward_Time=5
 ;按键参数
+
 [Key]
 ;重复延迟
 Repeat_Delay=500
