--- a/settings.ini
+++ b/settings.ini
@@ -24,6 +24,12 @@ File_Font=simsun
 File_Font_Max_Size=30
 ;文件名颜色
 File_Font_Color=yellow
+;状态字体
+State_Font=fzbiaoysjw
+;状态最大字号
+State_Font_Max_Size=20
+;状态颜色
+State_Font_Color=green
 ;时间字体
 Time_Font=fzbiaoysjw
 ;时间最大字号
@@ -45,8 +51,12 @@ Progress_Space=10
 Back_Time=5
 ;快进步长
 Forward_Time=5
-;按键参数
+;音量+步长
+Volume_Up_Step=5
+;音量-步长
+Volume_Down_Step=5
 
+;按键参数
 [Key]
 ;重复延迟
 Repeat_Delay=500
