添加定时关闭功能

--- a/settings.ini
+++ b/settings.ini
@@ -36,6 +36,12 @@ Time_Font=fzbiaoysjw
 Time_Font_Max_Size=15
 ;时间颜色
 Time_Font_Color=red
+;定时器字体
+Timer_Font=fzbiaoysjw
+;定时器最大字号
+Timer_Font_Max_Size=30
+;定时器颜色
+Timer_Font_Color=white
 ;进度条宽度
 Progress_Width=20
 ;进度条颜色1
@@ -51,10 +57,18 @@ Progress_Space=10
 Back_Time=5
 ;快进步长
 Forward_Time=5
+;默认音量
+Volume_Default=70
 ;音量+步长
 Volume_Up_Step=5
 ;音量-步长
 Volume_Down_Step=5
+;定时器默认时间
+Timer_Default=30
+;定时+步长
+Timer_Longer_Step=5
+;定时-步长
+Timer_Shorter_Step=5
 
 ;按键参数
 [Key]
