--- a/settings.ini
+++ b/settings.ini
@@ -30,6 +30,12 @@ State_Font=fzbiaoysjw
 State_Font_Max_Size=20
 ;状态颜色
 State_Font_Color=green
+;歌词字体
+Lrc_Font=simsun
+;歌词最大字号
+Lrc_Font_Max_Size=20
+;歌词颜色
+Lrc_Font_Color=white
 ;时间字体
 Time_Font=fzbiaoysjw
 ;时间最大字号
