--- a/settings.ini
+++ b/settings.ini
@@ -33,9 +33,11 @@ State_Font_Color=green
 ;歌词字体
 Lrc_Font=simsun
 ;歌词最大字号
-Lrc_Font_Max_Size=20
+Lrc_Font_Max_Size=25
 ;歌词颜色
 Lrc_Font_Color=white
+;当前歌词颜色
+Current_Lrc_Font_Color=yellow
 ;时间字体
 Time_Font=fzbiaoysjw
 ;时间最大字号
