--- a/settings.ini
+++ b/settings.ini
@@ -6,16 +6,14 @@ Fullscreen=0
 Window_Default_Size=(1000,600)
 ;窗口最小大小
 Window_Min_Size=(500,300)
-;按钮数量
-Button_Num=15
-;按钮最小间距
-Button_Min_Space=20
 ;按钮最大大小
-Button_Max_Size=80
+Button_Max_Size=50
+;按钮栏最大宽度
+Bar_Max_Size=80
 ;线宽
 Line_Width=5
 ;线颜色
-Line_Color=white
+Line_Color=grey
 ;背景颜色
 Background_Color=black
 ;文件名字体
@@ -24,6 +22,12 @@ File_Font=simsun
 File_Font_Max_Size=30
 ;文件名颜色
 File_Font_Color=yellow
+;消息字体
+Message_Font=fzbiaoysjw
+;消息最大字号
+Message_Font_Max_Size=20
+;消息颜色
+Message_Font_Color=red
 ;状态字体
 State_Font=fzbiaoysjw
 ;状态最大字号
@@ -56,8 +60,6 @@ Progress_Width=20
 Progress_Color_1=blue
 ;进度条颜色2
 Progress_Color_2=yellow
-;进度条间距
-Progress_Space=10
 
 ;播放器参数
 [Player]
