--- a/settings.ini
+++ b/settings.ini
@@ -10,10 +10,18 @@ Window_Min_Size=(500,300)
 Button_Max_Size=50
 ;按钮栏最大宽度
 Bar_Max_Size=80
+;按钮栏最大占比
+Bar_Max_Percent=20
+;侧边按钮栏最大占比
+Sidebar_Max_Percent=50
 ;线宽
 Line_Width=5
 ;线颜色
 Line_Color=grey
+;显示背景图片
+Show_Background_Image=1
+;背景图片
+Background_Image=img/bg.jpg
 ;背景颜色
 Background_Color=black
 ;文件名字体
