--- a/settings.ini
+++ b/settings.ini
@@ -6,6 +6,8 @@ Fullscreen=0
 Window_Default_Size=(1000,600)
 ;窗口最小大小
 Window_Min_Size=(500,300)
+;左边占窗口百分比
+Scale=40
 ;按钮最大大小
 Button_Max_Size=50
 ;按钮栏最大宽度
