--- a/config.ini
+++ b/config.ini
@@ -22,29 +22,29 @@ image=img/bg.jpg
 color=black
 
 [filename]
-font=simsun
+font=fzshk
 color=yellow
 size=(20,30)
 
 [message]
-font=simsun
+font=fzshk
 color=red
 size=(15,20)
 
 [state]
-font=fzbiaoysjw
+font=fzshk
 color=skyblue
 size=(15,20)
 
 [lrc]
-font=simsun
+font=fzfsk
 color1=yellow
 color2=white
 size=(15,30)
 
 [progress]
 width=30
-font=fzbiaoysjw
+font=fzshk
 size=(20,20)
 color=red
 color1=yellow
@@ -52,7 +52,7 @@ color2=blue
 
 [timer]
 width=30
-font=fzbiaoysjw
+font=fzshk
 size=(20,20)
 color=black
 color1=red
