--- a/config.ini
+++ b/config.ini
@@ -41,22 +41,23 @@ font=fzfsk
 color1=yellow
 color2=white
 size=(15,30)
+space=40
 
 [progress]
 width=30
+color1=yellow
+color2=blue
 font=fzshk
 size=(20,20)
 color=red
-color1=yellow
-color2=blue
 
 [timer]
 width=30
+color1=red
+color2=green
 font=fzshk
 size=(20,20)
 color=black
-color1=red
-color2=green
 
 [repeatkey]
 delay=500
