--- a/Themes/day/theme.ini
+++ b/Themes/day/theme.ini
@@ -29,6 +29,19 @@ volume=black
 timer=black
 error=white
 
+[fontsize]
+dirname=30
+dirpath=20
+filename=30
+filepath=20
+item=25
+lrc1=25
+lrc2=25
+progress=25
+volume=15
+timer=15
+error=20
+
 [progress]
 width=30
 color1=yellow
