--- a/Themes/day/theme.ini
+++ b/Themes/day/theme.ini
@@ -21,12 +21,13 @@ dirname=black
 dirpath=brown
 filename=black
 filepath=brown
-item=black
-lrc1=black
-lrc2=white
+item=white
+lrc1=red
+lrc2=blue
 progress=red
 volume=black
 timer=black
+msg=white
 error=white
 
 [fontsize]
@@ -40,6 +41,7 @@ lrc2=25
 progress=25
 volume=15
 timer=15
+msg=20
 error=20
 
 [progress]
@@ -56,6 +58,10 @@ color2=green
 width=15
 color1=red
 color2=green
+
+[msg]
+height=40
+color=green
 
 [error]
 height=40
