--- a/Themes/night/theme.ini
+++ b/Themes/night/theme.ini
@@ -27,6 +27,7 @@ lrc2=white
 progress=red
 volume=blue
 timer=blue
+msg=white
 error=white
 
 [fontsize]
@@ -40,6 +41,7 @@ lrc2=25
 progress=25
 volume=15
 timer=15
+msg=20
 error=20
 
 [progress]
@@ -56,6 +58,10 @@ color2=pink
 width=15
 color1=red
 color2=pink
+
+[msg]
+height=40
+color=green
 
 [error]
 height=40
