--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,22 @@
 [theme]
-theme=night
+theme = day
 
 [font]
-dirname=songhei.ttf
-dirpath=songhei.ttf
-filename=songhei.ttf
-filepath=songhei.ttf
-item=fangsong.ttf
-lrc1=fangsong.ttf
-lrc2=fangsong.ttf
-progress=songhei.ttf
-volume=songhei.ttf
-timer=songhei.ttf
-error=songhei.ttf
+dirname = songhei.ttf
+dirpath = songhei.ttf
+filename = songhei.ttf
+filepath = songhei.ttf
+item = fangsong.ttf
+lrc1 = fangsong.ttf
+lrc2 = fangsong.ttf
+progress = songhei.ttf
+volume = songhei.ttf
+timer = songhei.ttf
+msg = songhei.ttf
+error = songhei.ttf
 
 [time]
-animation=0.5
-error=3
+animation = 0.3
+msg = 2
+error = 2
+
